--- a/src/apps/static/pages/studio/math-lab/index.html
+++ b/src/apps/static/pages/studio/math-lab/index.html
@@ -69,18 +69,25 @@
   .errl-home-btn{ display:inline-flex; align-items:center; gap:.5rem; color:#fff; background: linear-gradient(135deg, #ff0080 0%, #8000ff 25%, #0080ff 50%, #00ff80 75%, #ff8000 100%); background-size:200% 200%; border:1px solid rgba(255,255,255,0.3); border-radius:999px; font-size:.8rem; font-weight:600; line-height:1; padding:.55rem .9rem .6rem; box-shadow:0 4px 12px rgba(0,0,0,0.3), 0 1px 0 rgba(255,255,255,0.3) inset; text-decoration:none; text-shadow:0 1px 2px rgba(0,0,0,0.8); animation: rainbow-flow 3s linear infinite; }
   @keyframes rainbow-flow{ 0%{background-position:0% 50%} 50%{background-position:100% 50%} 100%{background-position:0% 50%} }
   @media (max-width: 640px){ .errl-home-btn{ width:38px; height:38px; padding:0; border-radius:999px; display:inline-grid; place-items:center; overflow:hidden; font-size:0; } .errl-home-btn::before{ content:'←'; font-size:16px; line-height:1; filter: drop-shadow(0 1px 2px rgba(0,0,0,.8)); } }
-  .errl-nav{ display:flex; gap:.5rem; align-items:center; flex-wrap:wrap; overflow-x:auto; scrollbar-width:none; -ms-overflow-style:none; }
+  .errl-nav{ display:flex; gap:.5rem; align-items:center; flex-wrap:nowrap; overflow-x:auto; scrollbar-width:none; -ms-overflow-style:none; }
   .errl-nav::-webkit-scrollbar{ display:none; }
   @media (max-width: 900px){
-    .errl-header-content{ flex-wrap:wrap; gap:.75rem; }
+    .errl-header-content{ flex-wrap:nowrap; gap:.5rem; }
     .errl-nav{ gap:.4rem; max-width:100%; }
-    .errl-bubble-btn{ min-width:5.5rem; max-width:8rem; padding:.5rem .75rem .6rem; font-size:.75rem; }
+    .errl-bubble-btn{ min-width:5.5rem; max-width:8rem; padding:.5rem .75rem .6rem; font-size: clamp(0.6rem, 0.75rem, 0.85rem); border-radius: 999px; }
+  }
+  @media (max-width: 640px){
+    .errl-header-content{ flex-wrap:nowrap; gap:.4rem; }
+    .errl-bubble-btn{ font-size: clamp(0.55rem, 0.65rem, 0.75rem); border-radius: 999px; aspect-ratio: 1.2; }
+  }
+  @media (max-width: 460px){
+    .errl-bubble-btn{ border-radius: 999px; aspect-ratio: 1.1; }
   }
   @media (max-width: 640px){
     .errl-nav{ gap:.3rem; }
     .errl-bubble-btn{ min-width:4.5rem; max-width:7rem; padding:.45rem .65rem .55rem; font-size:.7rem; }
   }
-  .errl-bubble-btn{ position:relative; display:inline-flex; align-items:center; justify-content:center; min-width:6.5rem; max-width:10rem; padding:.6rem .9rem .7rem; border-radius:999px; font-size:.8rem; font-weight:600; line-height:1.1; text-align:center; color:#e8e8e8; text-decoration:none; white-space:nowrap; text-shadow:0 1px 3px rgba(0,0,0,0.8); background: linear-gradient(135deg, rgba(100,100,120,0.9) 0%, rgba(60,60,80,0.9) 25%, rgba(40,40,60,0.9) 50%, rgba(60,60,80,0.9) 75%, rgba(100,100,120,0.9) 100%), linear-gradient(45deg, rgba(255,255,255,0.1) 0%, transparent 30%, transparent 70%, rgba(255,255,255,0.1) 100%); border:2px solid transparent; background-clip:padding-box; box-shadow: 0 4px 12px rgba(0,0,0,0.3), 0 1px 0 rgba(255,255,255,0.2) inset, 0 -1px 0 rgba(0,0,0,0.3) inset; }
+  .errl-bubble-btn{ position:relative; display:inline-flex; align-items:center; justify-content:center; min-width:6.5rem; max-width:10rem; padding:.6rem .9rem .7rem; border-radius:999px; font-size: clamp(0.65rem, 0.8rem, 0.9rem); font-weight:600; line-height:1.1; text-align:center; color:#e8e8e8; text-decoration:none; white-space:nowrap; text-shadow:0 1px 3px rgba(0,0,0,0.8); background: linear-gradient(135deg, rgba(100,100,120,0.9) 0%, rgba(60,60,80,0.9) 25%, rgba(40,40,60,0.9) 50%, rgba(60,60,80,0.9) 75%, rgba(100,100,120,0.9) 100%), linear-gradient(45deg, rgba(255,255,255,0.1) 0%, transparent 30%, transparent 70%, rgba(255,255,255,0.1) 100%); border:2px solid transparent; background-clip:padding-box; box-shadow: 0 4px 12px rgba(0,0,0,0.3), 0 1px 0 rgba(255,255,255,0.2) inset, 0 -1px 0 rgba(0,0,0,0.3) inset; flex-shrink: 0; }
   .errl-bubble-btn::before{ content:""; position:absolute; inset:-2px; border-radius:999px; padding:2px; background: linear-gradient(90deg, rgba(0,255,255,0.6) 0%, rgba(255,0,255,0.6) 25%, rgba(255,255,0,0.6) 50%, rgba(0,255,0,0.6) 75%, rgba(0,255,255,0.6) 100%); background-size:200% 100%; mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0); mask-composite:xor; -webkit-mask-composite:xor; animation: led-flow 2s linear infinite; opacity:.7; }
   @keyframes led-flow{ 0%{background-position:0% 50%} 100%{background-position:200% 50%} }
   .errl-bubble-btn.active{ background: linear-gradient(135deg, rgba(140,140,160,0.95) 0%, rgba(100,100,130,0.95) 25%, rgba(80,80,110,0.95) 50%, rgba(100,100,130,0.95) 75%, rgba(140,140,160,0.95) 100%), linear-gradient(45deg, rgba(255,255,255,0.2) 0%, transparent 30%, transparent 70%, rgba(255,255,255,0.2) 100%); color:#fff; font-weight:700; text-shadow:0 1px 3px rgba(0,0,0,0.9); box-shadow: 0 6px 16px rgba(0,0,0,0.4), 0 1px 0 rgba(255,255,255,0.3) inset, 0 -1px 0 rgba(0,0,0,0.4) inset; }
@@ -144,7 +151,7 @@
         <a class="errl-bubble-btn" href="/gallery/" data-portal-link="gallery/">Gallery</a>
         <a class="errl-bubble-btn" href="/assets/" data-portal-link="assets/">Assets</a>
         <a class="errl-bubble-btn" href="/studio.html">Studio</a>
-        <a class="errl-bubble-btn" href="#" data-multitool-link>Multitool</a>
+        <a class="errl-bubble-btn" href="/designer.html" data-multitool-link>Designer</a>
       </nav>
     </div>
   </header>
