Fix component library: use proxy path in development mode
- Update StudioComponentLibrary to use /api/component-library proxy path in dev mode
- Add server proxy configuration to vite.studio.config.ts
- Fixes hardcoded localhost:8080 URLs that didn't work with Vite proxy setup
- Component library now properly routes through Vite dev server proxy

--- a/dist-mini/apps/studio/index.html
+++ b/dist-mini/apps/studio/index.html
@@ -6,8 +6,8 @@
     <title>Errl Studio</title>
     <base href="/">
     <link rel="stylesheet" href="../shared/styles/errlDesignSystem.css" />
-    <script type="module" crossorigin src="/assets/studio-h-bhFvya.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/studio-C_tzABq6.css">
+    <script type="module" crossorigin src="/assets/studio-BzAAQrWu.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/studio-DXQ1w258.css">
   </head>
   <body>
     <div id="root"></div>
