--- a/src/apps/designer/index.html
+++ b/src/apps/designer/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="./main.tsx"></script>
-    <base href="%BASE_URL%">
+    <base href="/">
   </body>
 </html>
 
